update Feedback SDK to 3.1.1

--- a/feedback_ios_demo/pod方式/Podfile
+++ b/feedback_ios_demo/pod方式/Podfile
@@ -7,5 +7,5 @@ source 'https://github.com/CocoaPods/Specs.git'
 # 添加依赖
 
 target 'FeedbackLibDemo' do
- pod 'AlicloudFeedback', '~> 3.0.1'
+ pod 'AlicloudFeedback', '~> 3.1.1’
 end
