--- a/hotfix_ios_demo/Podfile
+++ b/hotfix_ios_demo/Podfile
@@ -1,7 +1,7 @@
 # Uncomment the next line to define a global platform for your project
 # platform :ios, '9.0'
-
-ali_source 'alibaba-specs-mirror'
+#
+#ali_source 'alibaba-specs-mirror'
 
 source 'https://github.com/CocoaPods/Specs.git'
 source 'https://github.com/aliyun/aliyun-specs.git'
