--- a/cloudcode-ios-demo/AliCloudCodeDemo/AliCloudCodeDemo/Info.plist
+++ b/cloudcode-ios-demo/AliCloudCodeDemo/AliCloudCodeDemo/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSUserTrackingUsageDescription</key>
+	<string>获取IDFA的说明文案</string>
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
