--- a/tlog_ios_demo/Podfile
+++ b/tlog_ios_demo/Podfile
@@ -11,3 +11,12 @@ target 'tlog_ios_demo' do
 
 end
 
+post_install do |installer|
+  installer.generated_projects.each do |project|
+    project.targets.each do |target|
+      target.build_configurations.each do |config|
+        config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+      end
+    end
+  end
+end
