--- a/devops_ios_demo/Podfile
+++ b/devops_ios_demo/Podfile
@@ -3,7 +3,19 @@ source 'https://github.com/aliyun/aliyun-specs.git'
 
 target 'devops-ios-demo' do
 
-platform:ios, '9.0'
+platform:ios, '8.0'
 
+pod 'AlicloudUpdate',      '1.0.0.5'
 
 end
+
+
+#post_install do |installer|
+#    installer.generated_projects.each do |project|
+#        project.targets.each do |target|
+#            target.build_configurations.each do |config|
+#                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
+#            end
+#        end
+#    end
+#end
