--- a/httpdns_ios_demo/Podfile
+++ b/httpdns_ios_demo/Podfile
@@ -1,14 +1,20 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
-
+platform :ios, '12.0'
 
 source 'https://github.com/CocoaPods/Specs.git'
 source 'https://github.com/aliyun/aliyun-specs.git'
+
 target 'httpdns_ios_demo' do
   
-  # use_frameworks!
-  pod 'AlicloudHTTPDNS'
+  use_frameworks!
 
+  pod 'AlicloudHTTPDNS', '~> 2.2.0'
 
+end
 
+post_install do |installer|
+  installer.generated_projects.each do |target|
+    target.build_configurations.each do |config|
+      config.build_settings['ONLY_ACTIVE_ARCH'] = 'NO'
+    end
+  end
 end
