refactor: 1.AlicloudHTTPDNS版本更新为"3.0.0-beta"，2.使用示例更新为重构后的api，3.将NSURLConnection使用示例统一更新为NSURLSession示例

--- a/httpdns_ios_demo/Podfile
+++ b/httpdns_ios_demo/Podfile
@@ -7,7 +7,7 @@ target 'httpdns_ios_demo' do
   
   use_frameworks!
 
-  pod 'AlicloudHTTPDNS', '~> 2.2.0'
+  pod 'AlicloudHTTPDNS', '3.0.0-beta'
 
 end
 
