--- a/httpdns_ios_demo/Podfile
+++ b/httpdns_ios_demo/Podfile
@@ -7,7 +7,10 @@ target 'httpdns_ios_demo' do
   
   use_frameworks!
 
-  pod 'AlicloudHTTPDNS', '3.0.0-beta'
+  pod 'AlicloudHTTPDNS', '3.0.0'
+  
+  pod 'AFNetworking'
+  pod 'Alamofire'
 
 end
 
