--- a/httpdns_ios_demo/httpdns_ios_demo/httpdns-domains.plist
+++ b/httpdns_ios_demo/httpdns_ios_demo/httpdns-domains.plist
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict/>
+<dict>
+	<key>domains</key>
+	<array>
+		<string>www.aliyun.com</string>
+		<string>www.taobao.com</string>
+		<string>www.tmall.com</string>
+	</array>
+</dict>
 </plist>
