feat: 1.案例页8个具体案例全部完成 2.SDK初始化由autoInit改为手动读取配置文件key初始化

--- a/httpdns_ios_demo/Podfile
+++ b/httpdns_ios_demo/Podfile
@@ -10,6 +10,9 @@ target 'httpdns_ios_demo' do
 
   pod 'AlicloudHTTPDNS'
 
+  pod 'AFNetworking'
+  pod 'Alamofire'
+
   # Pods for httpdns_ios_demo
 
   target 'httpdns_ios_demoTests' do
