--- a/mpush_ios_demo/Podfile
+++ b/mpush_ios_demo/Podfile
@@ -8,7 +8,7 @@ source 'https://github.com/aliyun/aliyun-specs.git'
 
 target 'mpush_ios_demo' do
 
-pod 'AlicloudPush', '~> 2.0.0'
+pod 'AlicloudPush'
 
 end
 
