fix: 1.删除podfile.lock文件及cocoapods配置 2.feedback SDK删除指定版本号

--- a/feedback_ios_demo/Podfile
+++ b/feedback_ios_demo/Podfile
@@ -8,6 +8,6 @@ target 'YWFeedbackDemo' do
   # use_frameworks!
 
   # Pods for YWFeedbackDemo
-  pod 'AlicloudFeedback', '3.3.11'
+  pod 'AlicloudFeedback'
 
 end
