feat: 灵动岛外卖和打车模型开发完成

--- a/mpush_ios_demo/mpush_ios_demo/Info.plist
+++ b/mpush_ios_demo/mpush_ios_demo/Info.plist
@@ -20,9 +20,24 @@
 	<string>1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLName</key>
+			<string>com.aliyun.emas.pocdemo</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>pocdemo</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
+	<true/>
+	<key>NSSupportsLiveActivities</key>
 	<true/>
 	<key>UIAppFonts</key>
 	<array>
