fix: 1.修复信息页在大屏幕手机背景偏移问题 2.修复获得详情结束时间显示错误bug 3.优化灵动岛动态参数为可选项 4.demo指定大版本为3

--- a/mpush_ios_demo/Podfile
+++ b/mpush_ios_demo/Podfile
@@ -8,20 +8,8 @@ source 'https://github.com/aliyun/aliyun-specs.git'
 
 target 'mpush_ios_demo' do
 
-pod 'AlicloudPush'
+pod 'AlicloudPush', '~> 3'
 
-end
-
-#Build_Env 1日常， 2预发， 3线上
-post_install do |installer_representation|
-    installer_representation.pods_project.targets.each do |target|
-        puts "target name #{target.name}"
-        if target.name == 'AlicloudPush'
-            target.build_configurations.each do |config|
-                config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= ['$(inherited)','Build_Env=2']
-            end
-        end
-    end
 end
 
 target 'mpush_service_extension' do
