feat: 1.添加SDK配置页面 2.修改信息页注册失败时数据显示不全问题

--- a/mpush_ios_demo/mpush_ios_demo/Info.plist
+++ b/mpush_ios_demo/mpush_ios_demo/Info.plist
@@ -20,6 +20,12 @@
 	<string>1.2</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>ConfigAVisible</key>
+	<string>${CONFIG_A_VISIBLE}</string>
+	<key>PreElsUrl</key>
+	<string>$(PRE_ELS_URL)</string>
+	<key>PreVipUrl</key>
+	<string>$(PRE_VIP_URL)</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
