--- a/httpdns_ios_demo/Podfile
+++ b/httpdns_ios_demo/Podfile
@@ -8,7 +8,8 @@ target 'httpdns_ios_demo' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
-  pod 'AlicloudHTTPDNS'
+  pod 'AlicloudHTTPDNS', '3.2.1'
+  pod 'EMASLocalProxy', '1.3.6'
 
   pod 'AFNetworking'
   pod 'Alamofire'
